Fixed the alignment issues on the home page

--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -98,12 +98,12 @@ Text Domain:  accelerate-theme-child
 
 .homepage-featured-work {
     margin: 0;
+    display: flex;
+    justify-content: space-between;
 }
 
 .individual-featured-work {
     display: inline-block;
-    padding: 0 2em 0 0;
-    width: 33%;
 }
 
 .individual-featured-work h3 {
